--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
       <div class="wrapper">
         <a href=""><article>
           <p class="cercle">«</p>
-          <p class="texte">Quels guillemets choisir pour le Web ?</p>
+          <p class="texte droit">Quels guillemets choisir pour le Web ?</p>
         </article></a>
         <a href=""><article>
-          <p class="texte">Qu’est-ce qu’un espace insécable ?</p>
+          <p class="texte gauche">Qu’est-ce qu’un espace insécable ?</p>
           <p class="cercle">&amp;nbsp</p>
         </article></a>
         <a href=""><article>
           <p class="cercle">Windows</p>
           
-          <p class="texte">S’occuper de la veuve et de l’orphelin.</p>
+          <p class="texte droit">S’occuper de la veuve et de l’orphelin.</p>
         </article></a>
         <a href=""><article>
-          <p class="texte">Et la hauteur de ligne dans tout ça ?</p>
+          <p class="texte gauche">Et la hauteur de ligne dans tout ça ?</p>
           <p class="cercle">line-height</p>
         </article></a>
       </div>
